--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Backpacking America</title>
+    <link rel="stylesheet" href="./index.css">
+    <!--<link rel="stylesheet" href="./styleReset.css">-->
+
+    <script src="./main.js"></script>
 </head>
+
 <body>
-    
+    <div class="layer1">
+        <div class="container">
+            <div class="picture">
+                <h3>Start your journey</h3>
+            </div>
+
+        </div>
+
+        <div class="container">
+            <h4>This is not a real online service! You know you need something like this in your life to help you
+                realize your deepest dreams.</h4>
+            <h4>Sign up now to get Started</h4>
+            <h4>You know you want to.</h4>
+            <form class="signUpForm">
+                <label for="firstName">First Name:</label>
+                <input type="text" id="firstName" name="firstName" placeholder="John" minlength="1" required>
+
+                <label for="lastName">Last Name:</label>
+                <input type="text" id="lastName" name="lastName" placeholder="Doe" minlength="1" required>
+
+                <label for="userEmail">Email Address:</label>
+                <input type="email" id="email" name="email" placeholder="getgoing@backpackamerica.com" required>
+
+                <label for="userPassword">Password:</label>
+                <input type="password" id="password" name="password" placeholder="" minlength="8" required>
+
+
+                <label for="confirmPassword">Confirm Password:</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" placeholder="" minlength="8"
+                    required>
+
+                <button type="submit">Start your adventure!</button>
+            </form>
+        </div>
+
+
+
+
+    </div>
+    <footer></footer>
 </body>
+
 </html>
