Finished base UI structure

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,9 @@
 
         <div class="container">
             <div class="rightSide">
-                <h4>This is not a real online service! You know you need something like this in your life to help you
-                    realize your deepest dreams.<br><br>Sign up now to get Started</h4>
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure eaque, asperiores et saepe nihil
+                    ratione. Asperiores veritatis recusandae libero ut accusamus, vitae fuga blanditiis? Atque debitis
+                    dignissimos harum tempora maxime.</h4>
                 <h4>You know you want to.</h4>
 
                 <div class="container signUpContainer">
@@ -90,12 +91,7 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </div>
-    <footer></footer>
 </body>
 
 </html>
